--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@
   width: 100vw;
   display: flex;
   justify-content: center;
-  margin-top: 5rem;
 }
 form {
   width: 650px;
@@ -85,6 +84,8 @@ section {
 nav {
   display: flex;
   justify-content: center;
+  height: 50px;
+  align-items: center;
 }
 
 nav > div {
@@ -96,6 +97,24 @@ nav > div > a {
   font-weight: 500;
   text-decoration: none;
 }
-nav > div > a::placeholder {
+.active {
   color: rgb(62, 179, 62);
+}
+
+.input {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.input > button,
+.input > input {
+  width: 200px;
+  margin: 10px;
+}
+
+.input > button {
+  border: none;
+  background-color: #718096;
+  color: #fff;
 }
